--- a/src/app/paginas/registro/registro.page.html
+++ b/src/app/paginas/registro/registro.page.html
@@ -1,9 +1,43 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>registro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+  </ion-toolbar> -->
+<!-- </ion-header> -->
 <ion-content>
+  <ion-input>
+    <ion-header class="formHeader" color="talkColor">
+      <ion-icon class="navArrow2" name="md-arrow-round-back"></ion-icon>
+      <ion-title class="tituloTab">Formulario de Registro</ion-title>
+  </ion-header>
+  </ion-input>
 
-</ion-content>
+<ion-item color="primary">
+  <ion-label position="floating">Nombre:</ion-label>
+  <ion-input type="text"></ion-input>
+</ion-item>
+
+<ion-item color="primary">
+  <ion-label position="floating">Apellido:</ion-label>
+  <ion-input type="text"></ion-input>
+</ion-item>
+
+<ion-item color="primary">
+  <ion-label position="floating">Telefono:</ion-label>
+<ion-input type="tel"></ion-input>
+</ion-item>
+
+<ion-item color="primary">
+  <ion-label position="floating">Email:</ion-label>
+  <ion-input type="email"></ion-input>
+</ion-item>
+
+<ion-item color="primary">
+  <ion-label position="floating">Contraseña:</ion-label>
+  <ion-input type="password"></ion-input>
+</ion-item>
+
+<ion-button>Enviar</ion-button>
+
+
+ </ion-content>
+
