--- a/src/global.scss
+++ b/src/global.scss
@@ -1,15 +1,3 @@
-/*
- * App Global CSS
- * ----------------------------------------------------------------------------
- * Put style rules here that you want to apply globally. These styles are for
- * the entire app and not just one component. Additionally, this file can be
- * used as an entry point to import other CSS/Sass files to be included in the
- * output CSS.
- * For more information on global stylesheets, visit the documentation:
- * https://ionicframework.com/docs/layout/global-stylesheets
- */
-
-/* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
 
 /* Basic CSS for apps built with Ionic */
@@ -24,3 +12,33 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+  ion-content{
+    --background: url("../src/assets/cel.png") 0 0/100% 100% no-repeat;
+  }
+  h1 {
+    color:rgb(47, 133, 245);
+    text-align: right;
+  }
+  .formHeader {
+    height: 50px;
+    text-align: center;
+  }
+  
+  .navArrow2 {
+    color: rgb(248, 0, 227);
+    margin-left: 0px;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: block;
+    vertical-align: center;
+  
+  
+  }
+  
+  .tituloTab {
+    margin:auto;
+    display:block;
+    vertical-align: center;
+  
+  }
