diseño completo de registro

--- a/src/app/paginas/registro/registro.page.html
+++ b/src/app/paginas/registro/registro.page.html
@@ -11,7 +11,7 @@
   </ion-header>
   </ion-input>
 
-<ion-item color="primary">
+  <ion-item color="primary">
   <ion-label position="floating">Nombre:</ion-label>
   <ion-input type="text"></ion-input>
 </ion-item>
@@ -36,7 +36,7 @@
   <ion-input type="password"></ion-input>
 </ion-item>
 
-<ion-button>Enviar</ion-button>
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<ion-button>Guardar </ion-button>
 
 
  </ion-content>
