Creación del formulario

--- a/src/app/paginas/crud/crud.page.html
+++ b/src/app/paginas/crud/crud.page.html
@@ -1,5 +1,50 @@
 <app-encabezado titulo="CRUD"></app-encabezado>
 
 <ion-content>
+    <ion-card>
+        <ion-item color="primary">
+            <ion-label position="floating">Nombre del juego</ion-label>
+            <ion-input 
+            type= 'text'
+            placeholder= 'Nombre'
+            ></ion-input>
+        </ion-item>
+    </ion-card>
+    <ion-card>
+        <ion-item color="primary">
+            <ion-label position="floating">Descripción</ion-label>
+            <ion-textarea 
+            placeholder= 'Descripción'
+            ></ion-textarea>
+        </ion-item>
+    </ion-card>
+    <ion-card>
+        <ion-item color="primary">
+            <ion-label position="floating">Precio</ion-label>
+            <ion-input 
+            type= 'number'
+            placeholder= 'Precio'
+            ></ion-input>
+        </ion-item>
+    </ion-card>
+    <ion-card>
+        <ion-item color="primary">
+            <ion-label position="floating">Cantidad</ion-label>
+            <ion-input 
+            type= 'number'
+            placeholder= 'Cantidad'
+            ></ion-input>
+        </ion-item>
+    </ion-card>
+    <ion-badge color="light">
+        <ion-button color="success"  shape="round">
+            Actualizar
+        </ion-button>
+    </ion-badge>
 
+    <ion-badge color="light">
+    <ion-button color="danger" shape="round">
+        Borrar
+    </ion-button>
+    </ion-badge>
 </ion-content>
