--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,16 +5,9 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+//ignorar estos cambios en el MERGE, ya que solo lo use para pruebas
+<ion-content>
+  <ion-list>
+    <ion-button routerLink="/crud">CRUD</ion-button>
+  </ion-list>
 </ion-content>
