fix en comentario

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-//ignorar estos cambios en el MERGE, ya que solo lo use para pruebas
+<!-- ignorar estos cambios en el MERGE, ya que solo lo use para pruebas -->
 <ion-content>
   <ion-list>
     <ion-button routerLink="/crud">CRUD</ion-button>
