--- a/src/app/paginas/registro/registro.page.html
+++ b/src/app/paginas/registro/registro.page.html
@@ -1,43 +1,55 @@
-<!-- <ion-header>
+
   <ion-toolbar>
     <ion-title>registro</ion-title>
-  </ion-toolbar> -->
-<!-- </ion-header> -->
+  </ion-toolbar> 
+
+
 <ion-content>
   <ion-input>
-    <ion-header class="formHeader" color="talkColor">
-      <ion-icon class="navArrow2" name="md-arrow-round-back"></ion-icon>
+    <ion-header
+      class="formHeader"
+      color="talkColor"
+    >
+      <ion-icon
+        class="navArrow2"
+        name="md-arrow-round-back"
+      ></ion-icon>
+
       <ion-title class="tituloTab">Formulario de Registro</ion-title>
-  </ion-header>
+    </ion-header>
   </ion-input>
 
   <ion-item color="primary">
-  <ion-label position="floating">Nombre:</ion-label>
-  <ion-input type="text"></ion-input>
-</ion-item>
+    <ion-label position="floating">Nombre:</ion-label>
 
-<ion-item color="primary">
-  <ion-label position="floating">Apellido:</ion-label>
-  <ion-input type="text"></ion-input>
-</ion-item>
+    <ion-input type="text"></ion-input>
+  </ion-item>
 
-<ion-item color="primary">
-  <ion-label position="floating">Telefono:</ion-label>
-<ion-input type="tel"></ion-input>
-</ion-item>
+  <ion-item color="primary">
+    <ion-label position="floating">Apellido:</ion-label>
 
-<ion-item color="primary">
-  <ion-label position="floating">Email:</ion-label>
-  <ion-input type="email"></ion-input>
-</ion-item>
+    <ion-input type="text"></ion-input>
+  </ion-item>
 
-<ion-item color="primary">
-  <ion-label position="floating">Contraseña:</ion-label>
-  <ion-input type="password"></ion-input>
-</ion-item>
+  <ion-item color="primary">
+    <ion-label position="floating">Teléfono:</ion-label>
 
-&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<ion-button>Guardar </ion-button>
+    <ion-input type="tel"></ion-input>
+  </ion-item>
 
+  <ion-item color="primary">
+    <ion-label position="floating">Email:</ion-label>
 
- </ion-content>
+    <ion-input type="email"></ion-input>
+  </ion-item>
 
+  <ion-item color="primary">
+    <ion-label position="floating">Contraseña:</ion-label>
+
+    <ion-input type="password"></ion-input>
+  </ion-item>
+
+  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+
+  <ion-button>Guardar</ion-button>
+</ion-content>
