--- a/src/app/paginas/sesion/sesion.page.html
+++ b/src/app/paginas/sesion/sesion.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>sesion</ion-title>
+    <ion-title>Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
