--- a/src/app/paginas/registro/registro.page.html
+++ b/src/app/paginas/registro/registro.page.html
@@ -1,9 +1,3 @@
-
-  <ion-toolbar>
-    <ion-title>registro</ion-title>
-  </ion-toolbar> 
-
-
 <ion-content>
   <ion-input>
     <ion-header
@@ -49,7 +43,6 @@
     <ion-input type="password"></ion-input>
   </ion-item>
 
-  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
-
+   &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
   <ion-button>Guardar</ion-button>
 </ion-content>
