--- a/src/app/paginas/sesion/sesion.page.html
+++ b/src/app/paginas/sesion/sesion.page.html
@@ -1,9 +1,29 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Sesión</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-input>
+    <ion-header
+      class="formHeader"
+      color="talkColor"
+    >
+      <ion-icon
+        class="navArrow2"
+        name="md-arrow-round-back"
+      ></ion-icon>
+
+      <ion-title class="tituloTab">Inicio de sesion</ion-title>
+    </ion-header>
+  </ion-input>
+
+  <ion-item color="primary">
+    <ion-label position="floating">Email:</ion-label>
+    <ion-input type="email"></ion-input>
+  </ion-item>
+
+  <ion-item color="primary">
+    <ion-label position="floating">Contraseña:</ion-label>
+    <ion-input type="password"></ion-input>
+  </ion-item>
+
+  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+  <ion-button>Iniciar sesion</ion-button>
 
 </ion-content>
