--- a/src/app/paginas/sesion/sesion.page.html
+++ b/src/app/paginas/sesion/sesion.page.html
@@ -23,7 +23,7 @@
     <ion-input type="password"></ion-input>
   </ion-item>
 
-  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
-  <ion-button>Iniciar sesion</ion-button>
+  <ion-button [routerLink]="['/juegos']">ACCEDER</ion-button>
+  <ion-button [routerLink]="['/home']">REGRESAR</ion-button>
 
 </ion-content>
