--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-input>
+    <ion-header
+      class="formHeader"
+      color="talkColor">
+      
+      <ion-icon
+        class="navArrow2"
+        name="md-arrow-round-back"
+      ></ion-icon> 
+ 
+      <ion-title class="tituloTab">GAME ZONE</ion-title>
+    </ion-header>
+  </ion-input>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button  [routerLink]="['/registro']" color="primary">Registro</ion-button>
+  <ion-button  [routerLink]="['/sesion']"  color="primary">Iniciar sesion</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
 </ion-content>
