--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,7 @@
       <ion-title class="tituloTab">GAME ZONE</ion-title>
       <ion-button  [routerLink]="['/registro']" color="primary">Registro</ion-button>
       <ion-button  [routerLink]="['/sesion']"  color="primary">Iniciar sesion</ion-button>
+      <ion-button  [routerLink]="['/crud']"  color="primary">ADMINISTRADOR</ion-button>
    
 
 </ion-header>
