--- a/src/app/paginas/registro/registro.page.html
+++ b/src/app/paginas/registro/registro.page.html
@@ -45,6 +45,6 @@
   </ion-item>
 
    
-  &nbsp;&nbsp; &nbsp;&nbsp;<ion-button [routerLink]="['/home']">GUARDAR</ion-button>
+  &nbsp;&nbsp; &nbsp;&nbsp;<ion-button [routerLink]="['/seion']">GUARDAR</ion-button>
   <ion-button [routerLink]="['/home']">CANCELAR</ion-button>
 </ion-content>
