--- a/src/app/paginas/crud/crud.page.html
+++ b/src/app/paginas/crud/crud.page.html
@@ -1,4 +1,19 @@
 <ion-content>
+    <ion-input>
+        <ion-header
+          class="formHeader"
+          color="talkColor">
+          
+          <ion-icon
+            class="navArrow2"
+            name="md-arrow-round-back"
+          ></ion-icon>
+          
+          <ion-title class="tituloTab">Formulario de Registro</ion-title>
+        </ion-header>
+      </ion-input>
+
+
     <ion-card>
         <ion-item color="primary">
             <ion-label position="floating">Nombre del juego</ion-label>
@@ -34,16 +49,9 @@
             ></ion-input>
         </ion-item>
     </ion-card>
-    <ion-badge color="light">
-        <ion-button color="success"  shape="round">
-            Guardar
-        </ion-button>
-    </ion-badge>
-
-    <ion-badge color="light">
-    <ion-button [routerLink]="['/home']"color="danger" shape="round">
-        Regresar
-    </ion-button>
-    </ion-badge>
+   
+        <ion-button> Guardar</ion-button>
+    <ion-button [routerLink]="['/home']">Regresar</ion-button>
+  
 
 </ion-content>
