--- a/src/app/paginas/juegos/juegos.page.html
+++ b/src/app/paginas/juegos/juegos.page.html
@@ -1,9 +1,83 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>juegos</ion-title>
+    <ion-title class="tituloTab">Juegos disponibles</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen class="ion-padding" scroll-y="false">
+  <ion-slides>
+    <ion-slide>
+      <div class="slide">
+        <img src="https://image.api.playstation.com/cdn/UP0700/CUSA03388_00/v8JlD8KcQUtTqaLBmpFnj1ESRR5zMkLk.png" />
+        <h2>Dark Souls</h2>
+        <section>
+          <header></header>
+          <ion-button color="primary">Rentar</ion-button>
+        </section>
+      </div>
+    </ion-slide>
 
+    <ion-slide>
+      <img src="https://m.media-amazon.com/images/I/81d6JU6g1pL._AC_SX385_.jpg" />
+      <h2>SPIDERMAN</h2>
+      <section>
+        <header></header>
+        <ion-button color="primary">Rentar</ion-button>
+      </section>
+    </ion-slide>
+
+    <ion-slide>
+      <img src="https://m.media-amazon.com/images/I/61rAZbhTV4L._AC_.jpg" />
+      <h2>GTA V</h2>
+      <section>
+        <header></header>
+        <ion-button color="primary">Rentar</ion-button>
+      </section>
+    </ion-slide>
+
+    <ion-slide>
+      <img src="https://cl.buscafs.com/www.levelup.com/public/uploads/images/564004/564004_256x331.jpg" />
+      <h2>Gears of War 5</h2>
+      <section>
+        <header></header>
+        <ion-button color="primary">Rentar</ion-button>
+      </section>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
+
+<style>
+  ion-slides {
+    height: 100%;
+  }
+
+  .swiper-slide {
+    display: block;
+  }
+
+  .swiper-slide h2 {
+    margin-top: 2.8rem;
+  }
+
+  .swiper-slide img {
+    max-height: 50%;
+    max-width: 80%;
+    margin: 60px 0 40px;
+    pointer-events: none;
+  }
+
+  b {
+    font-weight: 500;
+  }
+
+  p {
+    padding: 0 40px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: var(--ion-color-step-600, #60646b);
+  }
+
+  p b {
+    color: var(--ion-text-color, #000000);
+  }
+</style>
