--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,10 +8,12 @@
         class="navArrow2"
         name="md-arrow-round-back"
       ></ion-icon> 
- 
       
-      <ion-title class="tituloTab">GAME ZONE</ion-title>
-      <ion-button  [routerLink]="['/registro']" color="primary">Registro</ion-button>
+      <ion-img src="Imagen1.png"></ion-img>
+      <ion-title  class="tituloTab">GAME ZONE</ion-title>
+      
+      <ion-button class="button" [routerLink]="['/registro']" color="primary">Registro</ion-button>
+
       <ion-button  [routerLink]="['/sesion']"  color="primary">Iniciar sesion</ion-button>
       <ion-button  [routerLink]="['/crud']"  color="primary">ADMINISTRADOR</ion-button>
    
