--- a/src/global.scss
+++ b/src/global.scss
@@ -43,6 +43,8 @@
     color: white;
     font-weight: 600;
     background-color:#424867;
+    
+    
   
   }
   ion-item{ //letras 
@@ -70,3 +72,9 @@
     font-size: medium;
   }
   
+  button{
+     background: #424867;
+     background-color: #424867;
+     color: black;
+
+  }
